# fundamental-dashboard

./: .gitignore  README.md  config.py  fundamental.py  iex.py  pyproject.toml  requirement.txt  requirements.txt
.github/workflows/: ci.yml
src/dashboard/: cli.py  config.py  data.py  models.py  mutual_funds.py  sec_edgar.py  ui.py
src/dashboard/providers/: __init__.py  base.py  mfapi_provider.py  sec_edgar_provider.py  yahoo_provider.py
src/dashboard/services/: __init__.py  fund_service.py  stock_service.py
src/dashboard/ui/: __init__.py  formatters.py  renderers.py
src/finscope/: __init__.py  cli.py  config.py  data.py  exceptions.py  models.py  mutual_funds.py  sec_edgar.py  stock.py  ui.py
src/finscope/ai/: __init__.py  agents.py  config.py  models.py  prompt_loader.py  tools.py
src/finscope/ai/prompts/: analyst.md  base.md  comparison.md  filing.md  qa.md
src/finscope/dividends/: __init__.py  engine.py
src/finscope/earnings/: __init__.py  engine.py
src/finscope/fund_analysis/: __init__.py  engine.py  models.py
src/finscope/peers/: __init__.py  engine.py
src/finscope/portfolio/: __init__.py  engine.py  models.py
src/finscope/providers/: __init__.py  base.py  mfapi_provider.py  sec_edgar_provider.py  yahoo_provider.py
src/finscope/risk/: __init__.py  engine.py  models.py
src/finscope/screener/: __init__.py  engine.py
src/finscope/services/: __init__.py  fund_service.py  stock_service.py
src/finscope/ui/: __init__.py  builders.py  formatters.py  renderers.py
src/finscope/valuation/: __init__.py  engine.py  models.py
src/finscope/watchlist/: __init__.py  engine.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/smoke/: test_smoke.py
tests/unit/: test_ai.py  test_builders.py  test_cli_commands.py  test_formatters.py  test_fund_analysis.py  test_fund_service.py  test_mfapi_provider.py  test_models.py  test_risk.py  test_screener.py  test_sec_edgar_provider.py  test_stock.py  test_stock_service.py  test_tier_features.py  test_valuation.py  test_yahoo_provider.py
