[project]
name = "finscope"
version = "1.0.0"
description = "Finscope — a terminal-based financial research tool powered by Yahoo Finance, SEC EDGAR, and Rich."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.30",
    "pandas>=2.0",
    "rich>=13.0",
    "requests>=2.28",
]

[project.scripts]
finscope = "finscope.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finscope"]

# ── Pytest configuration ──────────────────────────────────────────────────────
[tool.pytest.ini_options]
addopts = "-v --tb=short -m 'not integration'"
testpaths = ["tests"]
pythonpath = ["src"]

markers = [
    "integration: marks tests that make real network calls (deselected by default)",
    "smoke:       marks lightweight sanity-check tests",
    "unit:        marks fast, fully-mocked unit tests",
]

# ── Coverage configuration ────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/finscope"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered  = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]
