[project]
name = "finscope"
version = "1.0.0"
description = "Finscope — a terminal-based financial research library powered by Yahoo Finance, SEC EDGAR, and Rich."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["finance", "stocks", "etf", "mutual-funds", "sec-edgar", "yahoo-finance", "terminal", "cli", "rich"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "yfinance>=0.2.30",
    "pandas>=2.0",
    "rich>=13.0",
    "requests>=2.28",
    "pydantic-ai>=1.77.0",
    "questionary>=2.1.1",
]

[project.urls]
Homepage = "https://github.com/abhilashpanda04/finscope"
Repository = "https://github.com/abhilashpanda04/finscope"
Issues = "https://github.com/abhilashpanda04/finscope/issues"

[project.scripts]
finscope = "finscope.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finscope"]

[tool.hatch.build.targets.wheel.force-include]
"src/finscope/ai/prompts" = "finscope/ai/prompts"

# ── Pytest configuration ──────────────────────────────────────────────────────
[tool.pytest.ini_options]
addopts = "-v --tb=short -m 'not integration'"
testpaths = ["tests"]
pythonpath = ["src"]

markers = [
    "integration: marks tests that make real network calls (deselected by default)",
    "smoke:       marks lightweight sanity-check tests",
    "unit:        marks fast, fully-mocked unit tests",
]

# ── Coverage configuration ────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/finscope"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered  = false
